# fastapi-starter

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  IMPROVEMENTS.md  Makefile  PENETRATION_TEST_REPORT.md  PROJECT.md  REVIEW.md  SECURITY_AUDIT_REPORT.md  alembic.ini  compose.yml  docker-compose.yml  pyproject.toml
deploy/k8s/: README.md  worker-jobs-deployment.yaml  worker-jobs-hpa.yaml  worker-jobs-service.yaml  worker-tenant-deployment.yaml  worker-tenant-hpa.yaml  worker-tenant-service.yaml
docs/: contributing.md  getting-started.md  index.md  security.md
docs/architecture/: database-migrations.md  multi-tenancy.md  overview.md
docs/development/: testing.md
docs/production/: deployment.md
k8s/: temporal-worker-service.yaml  temporal-worker.yaml
src/alembic/: env.py  migration_utils.py
src/alembic/versions/: 001_initial.py  002_add_tenant_status.py  003_add_performance_indexes.py  004_add_workflow_executions.py  005_add_membership_unique_constraint.py  006_add_email_verification.py  007_add_tenant_invites.py  008_add_tenant_deleted_at.py  009_add_refresh_token_expires_indexes.py  010_add_tenant_slug_length_constraint.py  011_add_audit_logs.py  012_add_assumed_identity_audit_field.py  013_fix_slug_column_length.py  015_add_tenant_projects.py  (+4 more)
src/app/: main.py
tests/: conftest.py  helpers.py  test_admin.py  test_auth.py  test_cache.py  test_error_request_id.py  test_health_caching.py  test_invite_transaction_boundary.py  test_redis.py  test_schema_name_collision.py  test_security.py  test_shutdown.py  test_structured_logging.py  test_tenant_status.py  test_tenants.py  test_worker_health.py
tests/factories/: __init__.py  auth.py  base.py  tenant.py  user.py
tests/integration/: __init__.py  conftest.py  test_admin.py  test_assume_identity.py  test_auth.py  test_error_request_id.py  test_health_caching.py  test_invite_transaction_boundary.py  test_provisioning.py  test_tenant_isolation.py  test_tenants.py  test_worker_health.py
tests/unit/: __init__.py  conftest.py  test_assumed_identity_context.py  test_assumed_identity_token.py  test_audit_context.py  test_audit_service.py  test_entity_workflow.py  test_rate_limit.py  test_schema_name_collision.py  test_security.py  test_shutdown.py  test_structured_logging.py  test_temporal_routing.py  test_tenant_status.py  test_validators_property.py
tests/utils/: __init__.py  cleanup.py
todos/: 000-pending-p1-TEMPLATE.md  001-done-p0-rate-limit-async-lock.md  001-pending-p0-logout-tenant-scope.md  001-pending-p0-rate-limit-async-lock.md  001-pending-p1-sql-injection-schema-names.md  001-ready-p1-token-refresh-race-condition.md  002-done-p0-search-path-reset.md  002-pending-p0-blacklist-remaining-ttl.md  002-pending-p0-search-path-reset.md  002-ready-p1-accept-invite-transaction-boundary.md  002-resolved-p1-missing-cors-configuration.md  003-done-p0-ghost-workflow-fix.md  003-pending-p0-ghost-workflow-fix.md  003-pending-p1-timezone-standardization.md  003-ready-p1-sql-injection-schema-validation.md  003-resolved-p1-missing-rate-limiting.md  004-done-p1-audit-isolation.md  004-pending-p1-audit-isolation.md  004-pending-p1-slug-validation-mismatch.md  004-pending-p1-weak-jwt-secret-validation.md  004-ready-p1-tenant-schema-name-collision.md  005-done-p1-alembic-include-object.md  005-done-p1-slug-length-mismatch.md  005-pending-p1-alembic-include-object.md  005-ready-p2-refresh-token-expires-index.md  005-resolved-p2-transaction-rollback-error-paths.md  006-done-p1-deletion-order.md  006-done-p1-membership-idempotency.md  006-pending-p1-deletion-order.md  006-pending-p2-race-condition-tenant-provisioning.md  006-ready-p2-graceful-shutdown-request-drain.md  007-pending-p1-audit-session-isolation.md  007-ready-p2-rate-limit-invite-acceptance.md  007-resolved-p2-missing-database-indexes.md  008-done-p2-tenant-isolation.md  008-pending-p2-workflow-state-tracking.md  008-ready-p2-temporal-activity-idempotency.md  009-deferred-p2-outbox-pattern.md  009-ready-p2-scheduled-token-cleanup-workflow.md  009-resolved-p2-password-strength-validation.md  (+101 more)
(+122 files in other folders)
